--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "bluebird": "^3.5.3",
     "cors": "^2.8.5",
+    "jsonwebtoken": "^8.5.1",
     "koa-better-body": "^3.0.4",
     "koa-body": "^4.1.0",
     "koa-bodyparser": "^3.2.0",
+    "koa-jwt": "^3.5.1",
     "koa-router": "^7.4.0",
     "koa2": "^2.0.0-alpha.7",
     "koa2-cors": "^2.0.6",
     "md5": "^2.2.1",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "util": "^0.11.1",
+    "verify": "^0.1.2"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
